--- a/work/python/sample/sample_mapping_ipynb/sample_mapping_3.ipynb
+++ b/work/python/sample/sample_mapping_ipynb/sample_mapping_3.ipynb
@@ -1,8 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQL for accessing spatial data on postgreSQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "データベースシステム講義資料  \n",
+    "version 0.0.1   \n",
+    "authors: H. Chenan & N. Tsutsumida  \n",
+    "\n",
+    "Copyright (c) 2023 Narumasa Tsutsumida  \n",
+    "Released under the MIT license  \n",
+    "https://opensource.org/licenses/mit-license.php  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "adm2データの市町村別に色付けする"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## prerequisites"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,89 +51,120 @@
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "import numpy as np\n",
     "import folium\n",
-    "pd.set_option('display.max_columns', 100)"
+    "pd.set_option('display.max_columns', 100)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def query_geopandas(db):\n",
-    "    DATABASE_URL='postgresql://postgres:postgres@postgis_container:5432/{}'.format(db)\n",
+    "def query_geopandas(sql, db):\n",
+    "    \"\"\"\n",
+    "    Executes a SQL query on a postGIS and returns the result as a GeoPandas GeoDataFrame.\n",
+    "\n",
+    "    Args:\n",
+    "        sql (str): The SQL query to execute.\n",
+    "        db (str): The name of the PostgreSQL database to connect to.\n",
+    "\n",
+    "    Returns:\n",
+    "        geopandas.GeoDataFrame: The result of the SQL query as a GeoPandas GeoDataFrame.\n",
+    "    \"\"\"\n",
+    "    DATABASE_URL = 'postgresql://postgres:postgres@postgis_container:5432/{}'.format(db)\n",
     "    conn = create_engine(DATABASE_URL)\n",
-    "\n",
-    "    # adm2データの市町村別に色付けする\n",
-    "    sql = \"select * from adm2;\"\n",
-    "\n",
     "    query_result_gdf = gpd.GeoDataFrame.from_postgis(\n",
-    "        sql, conn, geom_col='geom') #geom_col='way' when using osm_kanto, geom_col='geom' when using gisdb\n",
-    "    return query_result_gdf"
+    "        sql, conn, geom_col='geom')\n",
+    "    return query_result_gdf\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define a sql command"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql = \"select * from adm2;\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def display_interactive_map(gdf):\n",
-    "    # GeoDataFrameの中心点を初期ビューとして使用\n",
-    "    m = folium.Map(location=[35.8616, 139.6455], zoom_start=12)\n",
+    "    \"\"\"\n",
+    "    Displays an interactive map using the Folium library, centered on the centroid of the input GeoDataFrame.\n",
     "\n",
+    "    Args:\n",
+    "        gdf (geopandas.GeoDataFrame): The GeoDataFrame to display on the map.\n",
+    "\n",
+    "    Returns:\n",
+    "        folium.Map: The interactive map object.\n",
+    "    \"\"\"\n",
+    "    # Get the centroid of the target area\n",
+    "    minx, maxx, miny, maxy = 138.5, 141, 34.5, 37\n",
+    "    center_x = (minx + maxx) / 2\n",
+    "    center_y = (miny + maxy) / 2\n",
+    "\n",
+    "    # Create a Folium map object with the specified location, tile style, and zoom level\n",
+    "    m = folium.Map(location=[center_y, center_x],\n",
+    "                   tiles='OpenStreetMap',\n",
+    "                   zoom_start=10)\n",
+    "\n",
+    "    # Create a color map for the engtype_2 column\n",
+    "    def style_function(feature):\n",
+    "        engtype = feature['properties']['engtype_2']\n",
+    "        return {\n",
+    "            'fillOpacity': 0.5,\n",
+    "            'weight': 0.5,\n",
+    "            'fillColor': 'green' if engtype=='City' \\\n",
+    "                else 'orange'if engtype=='Town' \\\n",
+    "                else 'blue' if engtype=='Village' \\\n",
+    "                else 'yellow' if engtype=='Special Ward' \\\n",
+    "                else 'pink' if engtype=='Capital' \\\n",
+    "                    else 'red'\n",
+    "        }\n",
     "    # Convert GeoDataFrame to GeoJSON\n",
     "    gjson = gdf.to_json()\n",
+    "    folium.GeoJson(gdf,style_function=style_function).add_to(m)\n",
     "\n",
-    "    # Add the choropleth layer\n",
-    "    folium.Choropleth(\n",
-    "        geo_data=gjson,\n",
-    "        data=gdf,\n",
-    "        columns=['gid', 'engtype_2'],\n",
-    "        key_on='feature.properties.gid',\n",
-    "        fill_color='YlOrRd',\n",
-    "        legend_name='Type'\n",
-    "    ).add_to(m)\n",
-    "\n",
-    "    return m"
+    "    return m\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_20363/1790712775.py\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_20363/1790712775.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mquery_geopandas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gisdb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mmap_display\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdisplay_interactive_map\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap_display\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_20363/4149819765.py\u001b[0m in \u001b[0;36mdisplay_interactive_map\u001b[0;34m(gdf)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Add the choropleth layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     folium.Choropleth(\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mgeo_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgjson\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'choropleth'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/folium/features.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, geo_data, data, columns, key_on, bins, fill_color, nan_fill_color, fill_opacity, nan_fill_opacity, line_color, line_weight, line_opacity, name, legend_name, overlay, control, show, topojson, smooth_factor, highlight, use_jenks, **kwargs)\u001b[0m\n\u001b[1;32m   1485\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcolor_data\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mkey_on\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1486\u001b[0m             \u001b[0mreal_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1487\u001b[0;31m             \u001b[0mreal_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreal_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1488\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0muse_jenks\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1489\u001b[0m                 \u001b[0;32mfrom\u001b[0m \u001b[0mjenkspy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjenks_breaks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def main():\n",
-    "    out = query_geopandas('gisdb')\n",
-    "    map_display = display_interactive_map(out)\n",
-    "    print(out)\n",
-    "    display(map_display)\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    main()"
+    "out = query_geopandas(sql,'gisdb')\n",
+    "map_display = display_interactive_map(out)\n",
+    "print(out)\n",
+    "display(map_display)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
