--- a/work/python/sample/sample_mapping_ipynb/sample_mapping_7.ipynb
+++ b/work/python/sample/sample_mapping_ipynb/sample_mapping_7.ipynb
@@ -1,75 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/site-packages/geopandas/_compat.py:111: UserWarning: The Shapely GEOS version (3.10.2-CAPI-1.16.0) is incompatible with the GEOS version PyGEOS was compiled with (3.10.1-CAPI-1.16.0). Conversions between both will be slow.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
    "source": [
-    "import os\n",
-    "from sqlalchemy import create_engine\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "import folium\n",
-    "pd.set_option('display.max_columns', 100)"
+    "# SQL for accessing spatial data on postgreSQL"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def query_geopandas(db):\n",
-    "    DATABASE_URL='postgresql://postgres:postgres@postgis_container:5432/{}'.format(db)\n",
-    "    conn = create_engine(DATABASE_URL)\n",
+    "データベースシステム講義資料  \n",
+    "version 0.0.1   \n",
+    "authors: H. Chenan & N. Tsutsumida  \n",
     "\n",
-    "    # 2019年1月の休日夜間人口\n",
-    "    sql = \"SELECT p.name, d.prefcode, d.year, d.month, d.population, p.geom \\\n",
-    "            FROM pop AS d \\\n",
-    "                INNER JOIN pop_mesh AS p \\\n",
-    "                   ON p.name = d.mesh1kmid \\\n",
-    "                WHERE d.dayflag='0' AND \\\n",
-    "                    d.timezone='1' AND \\\n",
-    "                    d.year='2019' AND \\\n",
-    "                    d.month='01';\"\n",
-    "\n",
-    "    query_result_gdf = gpd.GeoDataFrame.from_postgis(\n",
-    "        sql, conn, geom_col='geom') #geom_col='way' when using osm_kanto, geom_col='geom' when using gisdb\n",
-    "    return query_result_gdf"
+    "Copyright (c) 2023 Narumasa Tsutsumida  \n",
+    "Released under the MIT license  \n",
+    "https://opensource.org/licenses/mit-license.php  "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def display_interactive_map(gdf):\n",
-    "    m = folium.Map(location=[36, 139.5], zoom_start=8)\n",
-    "\n",
-    "    # Add the choropleth layer\n",
-    "    folium.Choropleth(\n",
-    "        geo_data=gdf.to_json(),\n",
-    "        data=gdf,\n",
-    "        columns=['name', 'population'],\n",
-    "        key_on='feature.properties.name',\n",
-    "        fill_color='YlOrRd',\n",
-    "        fill_opacity=0.7,\n",
-    "        line_opacity=0.2,\n",
-    "        legend_name='Population in Jan 2019'\n",
-    "    ).add_to(m)\n",
-    "\n",
-    "    return m"
+    "## Task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "埼玉県内市町村ごとの2019年1月の休日昼間人口集計"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## prerequisites"
    ]
   },
   {
@@ -78,20 +47,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
-    "    out = query_geopandas('gisdb')\n",
-    "    m = display_interactive_map(out)\n",
-    "    print(out)\n",
-    "    display(m)\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    main()"
+    "import os\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import numpy as np\n",
+    "import folium\n",
+    "pd.set_option('display.max_columns', 100)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query_geopandas(sql, db):\n",
+    "    \"\"\"\n",
+    "    Executes a SQL query on a postGIS and returns the result as a GeoPandas GeoDataFrame.\n",
+    "\n",
+    "    Args:\n",
+    "        sql (str): The SQL query to execute.\n",
+    "        db (str): The name of the PostgreSQL database to connect to.\n",
+    "\n",
+    "    Returns:\n",
+    "        geopandas.GeoDataFrame: The result of the SQL query as a GeoPandas GeoDataFrame.\n",
+    "    \"\"\"\n",
+    "    DATABASE_URL = 'postgresql://postgres:postgres@postgis_container:5432/{}'.format(db)\n",
+    "    conn = create_engine(DATABASE_URL)\n",
+    "    query_result_gdf = gpd.GeoDataFrame.from_postgis(\n",
+    "        sql, conn, geom_col='geom') #geom_col='way' when using osm_kanto, geom_col='geom' when using gisdb\n",
+    "    return query_result_gdf\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define a sql command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "sql = \"with pop as \\\n",
+    "            (select p.name, d.prefcode, d.year, d.month, d.population, p.geom \\\n",
+    "                from pop as d \\\n",
+    "                    inner join pop_mesh as p \\\n",
+    "                        on p.name = d.mesh1kmid \\\n",
+    "                    where d.dayflag='0' and \\\n",
+    "                            d.timezone='0' and \\\n",
+    "                            d.year='2019' and \\\n",
+    "                            d.month='01') \\\n",
+    "        select poly.name_2, sum(pop.population) as sum, pop.year, pop.month, pop.prefcode, poly.geom \\\n",
+    "            from pop, adm2 as poly \\\n",
+    "            where poly.name_1='Saitama' and \\\n",
+    "                    st_within(pop.geom,poly.geom) \\\n",
+    "            group by poly.name_2,pop.year, pop.month, pop.prefcode, poly.geom \\\n",
+    "            order by sum(pop.population) desc;\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_interactive_map(gdf):\n",
+    "    m = folium.Map(location=[36, 139.5], zoom_start=10)\n",
+    "\n",
+    "    folium.Choropleth(\n",
+    "        geo_data=gdf.to_json(),\n",
+    "        data=gdf,\n",
+    "        columns=['name_2', 'sum'],\n",
+    "        key_on='feature.properties.name_2',\n",
+    "        fill_color='YlOrRd',\n",
+    "        fill_opacity=0.7,\n",
+    "        line_opacity=0.2\n",
+    "    ).add_to(m)\n",
+    "\n",
+    "    return m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = query_geopandas(sql,'gisdb')\n",
+    "map_display = display_interactive_map(out)\n",
+    "print(out)\n",
+    "display(map_display)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
