[Update] typo and wrong SQL queries

--- a/work/python/sample/sample_mapping_ipynb/sample_mapping_8.ipynb
+++ b/work/python/sample/sample_mapping_ipynb/sample_mapping_8.ipynb
@@ -93,32 +93,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = \"WITH \\\n",
-    "        day AS \\\n",
-    "            (SELECT p.name, d.prefcode, d.year, d.month, d.population, p.geom \\\n",
-    "                FROM pop AS d \\\n",
-    "                INNER JOIN pop_mesh AS p \\\n",
-    "                    ON p.name = d.mesh1kmid \\\n",
-    "                WHERE d.dayflag='0' AND \\\n",
-    "                    d.timezone='0' AND \\\n",
-    "                    d.year='2019' AND \\\n",
-    "                    d.month='04'), \\\n",
-    "        night AS \\\n",
-    "            (SELECT p.name, d.prefcode, d.year, d.month, d.population, p.geom \\\n",
-    "                FROM pop AS d \\\n",
-    "                INNER JOIN pop_mesh AS p \\\n",
-    "                    ON p.name = d.mesh1kmid \\\n",
-    "                WHERE d.dayflag='0' AND \\\n",
-    "                        d.timezone='1' AND \\\n",
-    "                        d.year='2019' AND \\\n",
-    "                        d.month='04') \\\n",
-    "        SELECT poly.name_2, sum(day.population)-sum(night.population) AS dif, poly.geom \\\n",
-    "            FROM day, night, adm2 AS poly \\\n",
-    "            WHERE poly.name_1='Saitama' AND \\\n",
-    "                st_within(day.geom,poly.geom) AND \\\n",
-    "                st_within(night.geom,poly.geom) \\\n",
-    "        GROUP BY poly.name_2, poly.geom \\\n",
-    "        ORDER BY dif DESC;\"\n"
+    "sql = \"\"\"\n",
+    "    WITH\n",
+    "        day AS (\n",
+    "            SELECT p.name, d.prefcode, d.year, d.month, d.population, p.geom\n",
+    "            FROM pop AS d\n",
+    "            INNER JOIN pop_mesh AS p\n",
+    "                ON p.name = d.mesh1kmid\n",
+    "            WHERE d.dayflag='0' AND\n",
+    "                d.timezone='0' AND\n",
+    "                d.year='2019' AND\n",
+    "                d.month='04'\n",
+    "        ),\n",
+    "        night AS (\n",
+    "            SELECT p.name, d.prefcode, d.year, d.month, d.population, p.geom\n",
+    "            FROM pop AS d\n",
+    "            INNER JOIN pop_mesh AS p\n",
+    "                ON p.name = d.mesh1kmid\n",
+    "            WHERE d.dayflag='0' AND\n",
+    "                d.timezone='1' AND\n",
+    "                d.year='2019' AND\n",
+    "                d.month='04'\n",
+    "        )\n",
+    "    SELECT poly.name_2, sum(day.population)-sum(night.population) AS dif, poly.geom\n",
+    "        FROM day\n",
+    "        INNER JOIN night ON day.name = night.name\n",
+    "        INNER JOIN adm2 AS poly ON st_within(day.geom,poly.geom) AND st_within(night.geom,poly.geom)\n",
+    "        WHERE poly.name_1='Saitama'\n",
+    "    GROUP BY poly.name_2, poly.geom\n",
+    "    ORDER BY dif DESC;\n",
+    "\"\"\""
    ]
   },
   {
@@ -194,13 +198,6 @@
     "print(out)\n",
     "display(map_display)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
